fix header styling spacing

--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -14,7 +14,6 @@
   flex-direction: row;
   width: 100%;
   max-width: 80rem;
-  justify-content: center;
 }
 
 .grid{
